--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
           <li>Repeat those layers two times.</li>
           <li>Top it with a final layer of noodles, sauce, mozzarella, and parmesan cheese.</li>
        </ol>
-    <a href="recipes/lasagna.html">Lasagna Recipes</a>
-    <a href="recipes/fish.html">Fish Recipes</a>
-    <a href="recipes/Ice cream.html">Ice Cream Recipes</a>
+       <ul>
+        <li><a href="recipes/lasagna.html">Lasagna Recipes</a></li>
+        <li><a href="recipes/fish.html">Fish Recipes</a></li>
+        <li><a href="recipes/Ice cream.html">Ice Cream Recipes</a></li>
+       </ul>
 </body>
 </html>
